feat: add spring-react

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.13.1",
     "next": "15.0.2",
